<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mensajeinisesion">Bienvenido! Inicie sesión o registrese para continuar</string>
 	<string name="iniciousuario">Usuario:</string>
 	<string name="iniciocontrasena">Contraseña:</string>
 	<string name="hint_inicio_usuario">Ingrese su nick</string>
 	<string name="hint_inicio_contrasena">Contraseña</string>
 	<string name="button_inicio_sesion"> Iniciar sesión </string>
 	<string name="button_registro">Registrarse</string>
 	<string name="msj_inicial_registro">Ingrese los datos para el registro</string>
 	<string name="reg_nombre">Nombre:</string>
 	<string name="reg_user">Username:</string>
 	<string name="reg_pass">Contraseña:</string>
 	<string name="reg_pass_2">Por favor repita la contraseña:</string>
 	<string name="hint_registro_nombre">Ingrese su nombre</string>
 	<string name="hint_registro_user">Nombre de usuario</string>
 	<string name="hint_registro_pass">Digite la contraseña</string>
 	<string name="hint_registro_pass2">Verifique la contraseña</string>
 	<string name="button_reg_registro">Registrar datos</string>
 	<string name="txtv_mppal_bienv">Menú principal</string>
 	<string name="btn_mppal_menu1">Ingresar nota de texto</string>
 	<string name="btn_mppal_menu2">Ingresar nota de voz</string>
 	<string name="btn_mppal_menu3">Ver mis notas</string>
 	<string name="btn_mppal_menu4">Editar mi cuenta</string>
 	<string name="btn_edicion_editar">Editar datos</string>
 	<string name="txt_ingresar_notatexto">Datos de la nota de texto</string>
 	<string name="txt_ingnt_Nombre">Nombre para la nota:</string>
 	<string name="txt_ingnt_Tag">Tag o etiqueta de búsqueda:</string>
 	<string name="txt_ingnt_Contenido">Texto de la nota</string>
 	<string name="btn_ingnt_CrarNota">Crear nota</string>
 	<string name="txt_detnt_Nombre">Nombre de la nota:</string>
 	<string name="txt_detnt_Tag">Tag para la búsqueda de la nota:</string>
 	<string name="txt_detnt_Contenido">Texto de la nota:</string>
 	<string name="txt_detnt_HoraFecha">Fecha y hora de elaboración de la nota:</string>
 	<string name="txt_detnt_Ubicacion">Ubicación donde fue realizada la nota:</string>
 	<string name="txt_detnt_Latitud">Latitud </string>
 	<string name="txt_detnt_Longitud">Longitud </string>
 	<string name="txt_detnt_inicio">Detalles de la nota seleccionada </string>
 	<string name="btn_mapa">Ver ubicación en mapa </string>
 	<string-array name="valores_spinner_tag">
 	    <item>Todas las notas</item>
 	    <item>Familia</item>
 	    <item>Amigos</item>
 	    <item>Educación</item>
 	    <item>Viajes</item>
 	    <item>Salud</item>
 	    <item>Reuniones</item>
 	    <item>Deportes</item>
 	    <item>Varios</item>
 	</string-array>
 	<string name="prompt_spinner_tag">Seleccione tag</string>
 	<string name="txt_vernotas_tagspin">Seleccione un tag para simplificar la lista</string>
 	<string name="btn_vernotas_buscar">Buscar por tag</string>
 	<string name="btn_borrarnota">Eliminar esta nota</string>
 	<string-array name="valores_spinner_ingn">
 	    <item>Familia</item>
 	    <item>Amigos</item>
 	    <item>Educación</item>
 	    <item>Viajes</item>
 	    <item>Salud</item>
 	    <item>Reuniones</item>
 	    <item>Deportes</item>
 	    <item>Varios</item>
 	</string-array>
 	<string name="btn_cerrarsesion">Cerrar sesión</string>
 	<string name="txt_ingresar_notavoz">Datos de la nota de voz</string>
 	<string name="btn_startRecord">Iniciar grabación</string>
 	<string name="btn_stoprecord">Parar grabación</string>
 	<string name="txt_detnv_inicio">Detalles de la nota seleccionada </string>
 	<string name="btn_nv_reproducir">Play</string>
 	<string name="btn_nv_parar">Stop</string>
 	
</resources>
